{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 3585,
  "lineage": "9aac1bc0-0836-1f13-0a18-5df3f22406a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fwsb_rt_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0298a1e9515a328b0",
            "id": "rtb-0298a1e9515a328b0",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ingress1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-09ed019fa6d2865a7",
            "id": "rtb-09ed019fa6d2865a7",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ingress2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-000e46053ffd97a12",
            "id": "rtb-000e46053ffd97a12",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ingress3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0b61e080db923c895",
            "id": "rtb-0b61e080db923c895",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pod_rt_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-08f25145e1ea1049d",
            "id": "rtb-08f25145e1ea1049d",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.128.0/20",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pod_rt_tgwep",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-026af4da7e0190e2e",
            "id": "rtb-026af4da7e0190e2e",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pod_rt_web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-09cab587eebadf2a8",
            "id": "rtb-09cab587eebadf2a8",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prisb1_rt_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-068f9e29e1aa64d33",
            "id": "rtb-068f9e29e1aa64d33",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f3964757bf4a83f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prisb2_rt_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-008a08df987dec9a8",
            "id": "rtb-008a08df987dec9a8",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d22bbece528a08f0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prisb3_rt_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0013055bb5b5ebaaf",
            "id": "rtb-0013055bb5b5ebaaf",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e59dabfa33056606",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgwep1_rt_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-076d9cf40070121b6",
            "id": "rtb-076d9cf40070121b6",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07f3964757bf4a83f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgwep2_rt_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0eb6cbdb8009fa77d",
            "id": "rtb-0eb6cbdb8009fa77d",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d22bbece528a08f0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgwep3_rt_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0613bd0b3cd4dc779",
            "id": "rtb-0613bd0b3cd4dc779",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e59dabfa33056606",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.160.0/21",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-006a68aadd83d13cb",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg_pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0d8788d15d500127f",
            "description": "web application sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8788d15d500127f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sip connections fron the internet",
                "from_port": 5060,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5060
              },
              {
                "cidr_blocks": [
                  "10.1.128.0/20"
                ],
                "description": "HTTPS access from the HUB VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.160.128/26",
                  "10.1.160.192/26"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS access from the POD VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07eca7ddc4591f86e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "app_sg_pod",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.pod_alb_sg",
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg_pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0c54fc4af1cc03034",
            "description": "database pod sg mse-poc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowing traffic from web tier to RDS instance",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c54fc4af1cc03034",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.128.132/32"
                ],
                "description": "allowing traffic from private jumpbox",
                "from_port": 1443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1443
              },
              {
                "cidr_blocks": [
                  "10.1.129.90/32"
                ],
                "description": "allowing traffic from Jumpbox to RDS instance",
                "from_port": 1443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1443
              },
              {
                "cidr_blocks": [],
                "description": "allowing traffic from private jumpbox",
                "from_port": 1443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c6dc7b5947101c3"
                ],
                "self": false,
                "to_port": 1443
              },
              {
                "cidr_blocks": [],
                "description": "allowing traffic from private jumpbox",
                "from_port": 1443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d8788d15d500127f"
                ],
                "self": false,
                "to_port": 1443
              }
            ],
            "name": "db_sg_pod",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "aws_security_group.web_sg_pod",
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0373247b3bfa109a1",
            "description": "Security group attached to instances to securely connect to mse-poc. Modification could lead to connection loss.",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.160.128/26",
                  "10.1.160.192/26"
                ],
                "description": "Rule to allow connections to mse-poc from any instances this security group is attached to",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              }
            ],
            "id": "sg-0373247b3bfa109a1",
            "ingress": [],
            "name": "ec2_rds",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hub_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0c34b32c282eafe58",
            "description": "security group for hub application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowing http traffic from the internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c34b32c282eafe58",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowing http traffic from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allowing https traffic from the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hub_alb_sg",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pod_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-07eca7ddc4591f86e",
            "description": "security group for pod application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07eca7ddc4591f86e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.128.0/20"
                ],
                "description": "HTTPS access from the HUB VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.160.0/21"
                ],
                "description": "HTTPS access from the POD VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pod_alb_sg",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pod_ssmep_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0999e9d9531b92679",
            "description": "security group for ssm endpoints in POD VPC for MSE PoC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0999e9d9531b92679",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.160.0/21"
                ],
                "description": "HTTPS access to SSM from POD VPC VMs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "pod_ssmep_sg",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0678c04d410a501c3",
            "description": "Security group attached to mse-poc to allow EC2 instances with specific security groups attached to connect to the database. Modification could lead to connection loss.",
            "egress": [],
            "id": "sg-0678c04d410a501c3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Rule to allow connections from EC2 instances with sg-017c700ba8ece6e90 attached",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0373247b3bfa109a1"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "rds_ec2",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_rds",
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-03c6dc7b5947101c3",
            "description": "web pod sg mse-pocc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c6dc7b5947101c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.160.128/26",
                  "10.1.160.192/26"
                ],
                "description": "allow https from web tier sg",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow https from app tier sg",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d8788d15d500127f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow https from pod alb sg",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07eca7ddc4591f86e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web_sg_pod",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bgp_vpn",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "custome_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0c3d55a8b547d7b44_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-023065d81a4f3432d",
            "transit_gateway_route_table_id": "tgw-rtb-0c3d55a8b547d7b44"
          },
          "dependencies": [
            "module.bgp_vpn.aws_ec2_transit_gateway_route_table.vpn_att_rt",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "blackhole": true,
            "destination_cidr_block": "10.1.160.0/21",
            "id": "tgw-rtb-0c3d55a8b547d7b44_10.1.160.0/21",
            "transit_gateway_route_table_id": "tgw-rtb-0c3d55a8b547d7b44"
          },
          "dependencies": [
            "module.bgp_vpn.aws_ec2_transit_gateway_route_table.vpn_att_rt",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.1.128.0/20",
            "id": "tgw-rtb-0c3d55a8b547d7b44_10.1.128.0/20",
            "transit_gateway_attachment_id": "tgw-attach-023065d81a4f3432d",
            "transit_gateway_route_table_id": "tgw-rtb-0c3d55a8b547d7b44"
          },
          "dependencies": [
            "module.bgp_vpn.aws_ec2_transit_gateway_route_table.vpn_att_rt",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bgp_vpn",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "vpn_att_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:transit-gateway-route-table/tgw-rtb-0c3d55a8b547d7b44",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0c3d55a8b547d7b44",
            "tags": {
              "Name": "telemsetest-bgp-vpn-poc_tgw_rt"
            },
            "tags_all": {
              "Name": "telemsetest-bgp-vpn-poc_tgw_rt"
            },
            "transit_gateway_id": "tgw-006a68aadd83d13cb"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.bgp_vpn",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "vpn_att_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0c3d55a8b547d7b44_tgw-attach-03c75e49a1339396f",
            "resource_id": "vpn-020e50fc1aa519921",
            "resource_type": "vpn",
            "transit_gateway_attachment_id": "tgw-attach-03c75e49a1339396f",
            "transit_gateway_route_table_id": "tgw-rtb-0c3d55a8b547d7b44"
          },
          "dependencies": [
            "module.bgp_vpn.aws_customer_gateway.cgw",
            "module.bgp_vpn.aws_ec2_transit_gateway_route_table.vpn_att_rt",
            "module.bgp_vpn.aws_vpn_connection.vpn_connection",
            "module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "CMS-App-Server",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035f902e3a175fb99",
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:instance/i-0d7c7847e3a4eed99",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09298f9a4ecf8e524",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7c7847e3a4eed99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-083b1a042e3c11b0f",
            "private_dns": "ip-10-1-160-134.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.160.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09298f9a4ecf8e524",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c6dc7b5947101c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df0645066347c637",
            "tags": {
              "Name": "CMS-App-Server"
            },
            "tags_all": {
              "Name": "CMS-App-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c6dc7b5947101c3"
            ]
          },
          "dependencies": [
            "aws_placement_group.pod_placement_group",
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "aws_security_group.web_sg_pod",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "CMS-Test-Web",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035f902e3a175fb99",
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:instance/i-0454e8faddd3ef791",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d500539425d81ae",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0454e8faddd3ef791",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-058d0f2ac0768acfe",
            "private_dns": "ip-10-1-160-135.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.160.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d500539425d81ae",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c6dc7b5947101c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df0645066347c637",
            "tags": {
              "Name": "CMS-Test-Web"
            },
            "tags_all": {
              "Name": "CMS-Test-Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c6dc7b5947101c3"
            ]
          },
          "dependencies": [
            "aws_placement_group.pod_placement_group",
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "aws_security_group.web_sg_pod",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "CMS-Web",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035f902e3a175fb99",
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:instance/i-0296424512d071052",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-012dfb416a42aa570",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0296424512d071052",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_group": "pod-placement-group",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00413aabaa6e07e9c",
            "private_dns": "ip-10-1-160-142.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.160.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-012dfb416a42aa570",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c6dc7b5947101c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df0645066347c637",
            "tags": {
              "Name": "CMS-Web"
            },
            "tags_all": {
              "Name": "CMS-Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c6dc7b5947101c3"
            ]
          },
          "dependencies": [
            "aws_placement_group.pod_placement_group",
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "aws_security_group.web_sg_pod",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "CMS-Web-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035f902e3a175fb99",
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:instance/i-0e2902d02ac039374",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-022f5a9f94c0a7f4c",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e2902d02ac039374",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_group": "pod-placement-group",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00dbe9c3986b0a4ed",
            "private_dns": "ip-10-1-160-145.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.160.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-022f5a9f94c0a7f4c",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c6dc7b5947101c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df0645066347c637",
            "tags": {
              "Name": "CMS-Web-2"
            },
            "tags_all": {
              "Name": "CMS-Web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c6dc7b5947101c3"
            ]
          },
          "dependencies": [
            "aws_placement_group.pod_placement_group",
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "aws_security_group.web_sg_pod",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "IQ-Connector",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035f902e3a175fb99",
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:instance/i-0cc581b193bb690c9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d54edc68816d553",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc581b193bb690c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6a.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b7cbbe94fa28d0cd",
            "private_dns": "ip-10-1-160-147.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.160.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d54edc68816d553",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c6dc7b5947101c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df0645066347c637",
            "tags": {
              "Name": "IQ-Connector"
            },
            "tags_all": {
              "Name": "IQ-Connector"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c6dc7b5947101c3"
            ]
          },
          "dependencies": [
            "aws_placement_group.pod_placement_group",
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "aws_security_group.web_sg_pod",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "Test-CMS-App-Server",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035f902e3a175fb99",
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:instance/i-040c190150ba2bf5d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0def331a1a9efec95",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040c190150ba2bf5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eaac6fb670cd4df4",
            "private_dns": "ip-10-1-160-160.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.160.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0def331a1a9efec95",
                "volume_size": 256,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-03c6dc7b5947101c3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df0645066347c637",
            "tags": {
              "Name": "Test-CMS-App-Server"
            },
            "tags_all": {
              "Name": "Test-CMS-App-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c6dc7b5947101c3"
            ]
          },
          "dependencies": [
            "aws_placement_group.pod_placement_group",
            "aws_security_group.app_sg_pod",
            "aws_security_group.pod_alb_sg",
            "aws_security_group.web_sg_pod",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc-endpoint/vpce-077aa0e3ef73884a4",
            "dns_entry": [
              {
                "dns_name": "vpce-077aa0e3ef73884a4-vk1fg4yn.ec2.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-077aa0e3ef73884a4-vk1fg4yn-ap-northeast-1c.ec2.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-077aa0e3ef73884a4-vk1fg4yn-ap-northeast-1a.ec2.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-077aa0e3ef73884a4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08cd8c97a3729cbeb",
              "eni-0a1c19f4268e88829"
            ],
            "owner_id": "931366402038",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f7c95a0fa6fa55fd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-02b49af74f0fee60c",
              "subnet-0df0645066347c637"
            ],
            "tags": {
              "Name": "ssm-interface-ep-ec2-vpc-endpoint"
            },
            "tags_all": {
              "Name": "ssm-interface-ep-ec2-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "aws_route_table.pod_rt_db",
            "aws_route_table.pod_rt_web_app",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "kms",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc-endpoint/vpce-0c37f7dbb0954ee3d",
            "dns_entry": [
              {
                "dns_name": "vpce-0c37f7dbb0954ee3d-kz252frv.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c37f7dbb0954ee3d-kz252frv-ap-northeast-1a.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c37f7dbb0954ee3d-kz252frv-ap-northeast-1c.kms.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0c37f7dbb0954ee3d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-005cec73116db4b29",
              "eni-08eabf74f79cc869e"
            ],
            "owner_id": "931366402038",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f7c95a0fa6fa55fd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.kms",
            "state": "available",
            "subnet_ids": [
              "subnet-02b49af74f0fee60c",
              "subnet-0df0645066347c637"
            ],
            "tags": {
              "Name": "kms-interface-ep-vpc-endpoint"
            },
            "tags_all": {
              "Name": "kms-interface-ep-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "aws_route_table.pod_rt_db",
            "aws_route_table.pod_rt_web_app",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc-endpoint/vpce-03cbb40ea2c921416",
            "dns_entry": [
              {
                "dns_name": "vpce-03cbb40ea2c921416-zozkm9bh.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-03cbb40ea2c921416-zozkm9bh-ap-northeast-1a.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-03cbb40ea2c921416-zozkm9bh-ap-northeast-1c.logs.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-03cbb40ea2c921416",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08d643bc07e3e424d",
              "eni-0b71f35dfd4b37414"
            ],
            "owner_id": "931366402038",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f7c95a0fa6fa55fd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-02b49af74f0fee60c",
              "subnet-0df0645066347c637"
            ],
            "tags": {
              "Name": "logs-interface-vpc-endpoint"
            },
            "tags_all": {
              "Name": "logs-interface-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "aws_route_table.pod_rt_db",
            "aws_route_table.pod_rt_web_app",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc-endpoint/vpce-01f529529f688b9eb",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-01f529529f688b9eb",
            "owner_id": "931366402038",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08f25145e1ea1049d",
              "rtb-09cab587eebadf2a8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "s3-vpc-endpoint"
            },
            "tags_all": {
              "Name": "s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "aws_route_table.pod_rt_db",
            "aws_route_table.pod_rt_web_app",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc-endpoint/vpce-0c825d93f7ac12fa8",
            "dns_entry": [
              {
                "dns_name": "vpce-0c825d93f7ac12fa8-hzzo6dju.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c825d93f7ac12fa8-hzzo6dju-ap-northeast-1a.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-0c825d93f7ac12fa8-hzzo6dju-ap-northeast-1c.ec2messages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-0c825d93f7ac12fa8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09afccd2043623c12",
              "eni-0d5903d6247343b18"
            ],
            "owner_id": "931366402038",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f7c95a0fa6fa55fd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-02b49af74f0fee60c",
              "subnet-0df0645066347c637"
            ],
            "tags": {
              "Name": "ssm-interface-ep-ec2messages-vpc-endpoint"
            },
            "tags_all": {
              "Name": "ssm-interface-ep-ec2messages-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "aws_route_table.pod_rt_db",
            "aws_route_table.pod_rt_web_app",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc-endpoint/vpce-030f40f77939321bd",
            "dns_entry": [
              {
                "dns_name": "vpce-030f40f77939321bd-1iwpoqjz.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-030f40f77939321bd-1iwpoqjz-ap-northeast-1c.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              },
              {
                "dns_name": "vpce-030f40f77939321bd-1iwpoqjz-ap-northeast-1a.ssmmessages.ap-northeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2E726K9Y6RL4W"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-030f40f77939321bd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0763053c26d641608",
              "eni-0b358b7e8785631df"
            ],
            "owner_id": "931366402038",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f7c95a0fa6fa55fd"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-02b49af74f0fee60c",
              "subnet-0df0645066347c637"
            ],
            "tags": {
              "Name": "ssm-interface-ep-ssmmessages-vpc-endpoint"
            },
            "tags_all": {
              "Name": "ssm-interface-ep-ssmmessages-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "aws_route_table.pod_rt_db",
            "aws_route_table.pod_rt_web_app",
            "module.endpoints.data.aws_vpc_endpoint_service.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints_hub",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc-endpoint/vpce-094b49c005660c08d",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-094b49c005660c08d",
            "owner_id": "931366402038",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-000e46053ffd97a12",
              "rtb-0013055bb5b5ebaaf",
              "rtb-008a08df987dec9a8",
              "rtb-0298a1e9515a328b0",
              "rtb-068f9e29e1aa64d33",
              "rtb-09ed019fa6d2865a7",
              "rtb-0b61e080db923c895"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "hub-s3-gw-endpoint"
            },
            "tags_all": {
              "Name": "hub-s3-gw-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "aws_route_table.fwsb_rt_hub",
            "aws_route_table.ingress1",
            "aws_route_table.ingress2",
            "aws_route_table.ingress3",
            "aws_route_table.prisb1_rt_hub",
            "aws_route_table.prisb2_rt_hub",
            "aws_route_table.prisb3_rt_hub",
            "module.endpoints_hub.data.aws_vpc_endpoint_service.this",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_vpn",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "vpn_att_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:transit-gateway-route-table/tgw-rtb-0618da403a8ba3580",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0618da403a8ba3580",
            "tags": {
              "Name": "telemsetest-vpn-poc_tgw_rt"
            },
            "tags_all": {
              "Name": "telemsetest-vpn-poc_tgw_rt"
            },
            "transit_gateway_id": "tgw-006a68aadd83d13cb"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_vpn",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_association",
      "name": "vpn_att_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0618da403a8ba3580_tgw-attach-0b9bf761108dbe55a",
            "resource_id": "vpn-0596a47403b8ed754",
            "resource_type": "vpn",
            "transit_gateway_attachment_id": "tgw-attach-0b9bf761108dbe55a",
            "transit_gateway_route_table_id": "tgw-rtb-0618da403a8ba3580"
          },
          "dependencies": [
            "module.static_vpn.aws_customer_gateway.cgw",
            "module.static_vpn.aws_ec2_transit_gateway_route_table.vpn_att_rt",
            "module.static_vpn.aws_vpn_connection.vpn_connection",
            "module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.static_vpn",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table_propagation",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0618da403a8ba3580_tgw-attach-023065d81a4f3432d",
            "resource_id": "vpc-02d3c5f7f39172136",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-023065d81a4f3432d",
            "transit_gateway_route_table_id": "tgw-rtb-0618da403a8ba3580"
          },
          "dependencies": [
            "module.static_vpn.aws_ec2_transit_gateway_route_table.vpn_att_rt",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "tgw-rtb-0618da403a8ba3580_tgw-attach-05150d97e34bdad64",
            "resource_id": "vpc-068ee7d718b46a952",
            "resource_type": "vpc",
            "transit_gateway_attachment_id": "tgw-attach-05150d97e34bdad64",
            "transit_gateway_route_table_id": "tgw-rtb-0618da403a8ba3580"
          },
          "dependencies": [
            "module.static_vpn.aws_ec2_transit_gateway_route_table.vpn_att_rt",
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:transit-gateway/tgw-006a68aadd83d13cb",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "disable",
            "default_route_table_propagation": "enable",
            "description": "My TGW shared with several other AWS accounts",
            "dns_support": "enable",
            "id": "tgw-006a68aadd83d13cb",
            "multicast_support": "disable",
            "owner_id": "931366402038",
            "propagation_default_route_table_id": "tgw-rtb-048df8fcd3ee170a0",
            "tags": {
              "Name": "tgw-mse-poc"
            },
            "tags_all": {
              "Name": "tgw-mse-poc"
            },
            "timeouts": {
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.1.160.0/21",
            "id": "tgw-rtb-0b233418b2c2cab0a_10.1.160.0/21",
            "transit_gateway_attachment_id": "tgw-attach-023065d81a4f3432d",
            "transit_gateway_route_table_id": "tgw-rtb-0b233418b2c2cab0a"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "0.0.0.0/0",
            "id": "tgw-rtb-0b233418b2c2cab0a_0.0.0.0/0",
            "transit_gateway_attachment_id": "tgw-attach-05150d97e34bdad64",
            "transit_gateway_route_table_id": "tgw-rtb-0b233418b2c2cab0a"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.tgw.aws_ec2_transit_gateway_route_table.this",
            "module.tgw.aws_ec2_transit_gateway_vpc_attachment.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:transit-gateway-route-table/tgw-rtb-0b233418b2c2cab0a",
            "default_association_route_table": false,
            "default_propagation_route_table": false,
            "id": "tgw-rtb-0b233418b2c2cab0a",
            "tags": {
              "Name": "tgw-mse-poc"
            },
            "tags_all": {
              "Name": "tgw-mse-poc"
            },
            "transit_gateway_id": "tgw-006a68aadd83d13cb"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.tgw",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tgw_att_to_hub",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-023065d81a4f3432d",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-053ed264a09779254",
              "subnet-0bc593e727cef0b43",
              "subnet-0f7dafcbaae6724d7"
            ],
            "tags": {
              "Name": "tgw-mse-poc"
            },
            "tags_all": {
              "Name": "tgw-mse-poc"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-006a68aadd83d13cb",
            "vpc_id": "vpc-02d3c5f7f39172136",
            "vpc_owner_id": "931366402038"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "tgw_att_to_pod",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-05150d97e34bdad64",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-05352ca2b7599f669",
              "subnet-06681376aa8685e43"
            ],
            "tags": {
              "Name": "tgw-mse-poc"
            },
            "tags_all": {
              "Name": "tgw-mse-poc"
            },
            "transit_gateway_default_route_table_association": false,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-006a68aadd83d13cb",
            "vpc_id": "vpc-068ee7d718b46a952",
            "vpc_owner_id": "931366402038"
          },
          "dependencies": [
            "module.tgw.aws_ec2_transit_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:network-acl/acl-0258eb2c5275d19e1",
            "default_network_acl_id": "acl-0258eb2c5275d19e1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0258eb2c5275d19e1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "931366402038",
            "subnet_ids": [
              "subnet-001808ec4f77b9e03",
              "subnet-053ed264a09779254",
              "subnet-095013b6cfe387aca",
              "subnet-0b0396b955c398fdf",
              "subnet-0b4f77971f7009323",
              "subnet-0bc593e727cef0b43",
              "subnet-0c1bf50325452692e",
              "subnet-0f7dafcbaae6724d7"
            ],
            "tags": {
              "Name": "hub-default"
            },
            "tags_all": {
              "Name": "hub-default"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0bac24b0658d800f1",
            "default_route_table_id": "rtb-0bac24b0658d800f1",
            "id": "rtb-0bac24b0658d800f1",
            "owner_id": "931366402038",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "hub-default"
            },
            "tags_all": {
              "Name": "hub-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0c65d701d63785e0c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c65d701d63785e0c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hub-default"
            },
            "tags_all": {
              "Name": "hub-default"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ee3e4afb7e877a6",
            "domain": "vpc",
            "id": "eipalloc-03ee3e4afb7e877a6",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-182-95-131.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.182.95.131",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hub-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "hub-ap-northeast-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040f781ac03093664",
            "domain": "vpc",
            "id": "eipalloc-040f781ac03093664",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-79-179-130.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.79.179.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hub-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "hub-ap-northeast-1c"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc020d3889c6d266",
            "domain": "vpc",
            "id": "eipalloc-0fc020d3889c6d266",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-75-237-16.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.237.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hub-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "hub-ap-northeast-1d"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:internet-gateway/igw-0624cf54ed91f9ebe",
            "id": "igw-0624cf54ed91f9ebe",
            "owner_id": "931366402038",
            "tags": {
              "Name": "hub"
            },
            "tags_all": {
              "Name": "hub"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ee3e4afb7e877a6",
            "association_id": "eipassoc-0f87f97b41d2502eb",
            "connectivity_type": "public",
            "id": "nat-07f3964757bf4a83f",
            "network_interface_id": "eni-046de13ef723810e8",
            "private_ip": "10.1.129.25",
            "public_ip": "18.182.95.131",
            "subnet_id": "subnet-0c1bf50325452692e",
            "tags": {
              "Name": "hub-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "hub-ap-northeast-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040f781ac03093664",
            "association_id": "eipassoc-05e26a5d8b1ce4b6f",
            "connectivity_type": "public",
            "id": "nat-0d22bbece528a08f0",
            "network_interface_id": "eni-0a02fa4e85555004b",
            "private_ip": "10.1.129.50",
            "public_ip": "35.79.179.130",
            "subnet_id": "subnet-098ddbc73b332512a",
            "tags": {
              "Name": "hub-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "hub-ap-northeast-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc020d3889c6d266",
            "association_id": "eipassoc-0a9fe5149278f5d2c",
            "connectivity_type": "public",
            "id": "nat-0e59dabfa33056606",
            "network_interface_id": "eni-030447eb559644ff6",
            "private_ip": "10.1.129.74",
            "public_ip": "35.75.237.16",
            "subnet_id": "subnet-008dfd7c68976415d",
            "tags": {
              "Name": "hub-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "hub-ap-northeast-1d"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01fe19840392be49a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07f3964757bf4a83f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01fe19840392be49a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-031431bf31183d24e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d22bbece528a08f0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-031431bf31183d24e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0870a06ac2bdc6b181080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e59dabfa33056606",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0870a06ac2bdc6b18",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0624cf54ed91f9ebe",
            "id": "r-rtb-0324f639aa09fbbe01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0324f639aa09fbbe0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-01fe19840392be49a",
            "id": "rtb-01fe19840392be49a",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-031431bf31183d24e",
            "id": "rtb-031431bf31183d24e",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0870a06ac2bdc6b18",
            "id": "rtb-0870a06ac2bdc6b18",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0324f639aa09fbbe0",
            "id": "rtb-0324f639aa09fbbe0",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hub-public"
            },
            "tags_all": {
              "Name": "hub-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032dff21953abfa07",
            "route_table_id": "rtb-01fe19840392be49a",
            "subnet_id": "subnet-0b4f77971f7009323"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015230387b84c362b",
            "route_table_id": "rtb-031431bf31183d24e",
            "subnet_id": "subnet-0b0396b955c398fdf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05839d710a108c232",
            "route_table_id": "rtb-0870a06ac2bdc6b18",
            "subnet_id": "subnet-04cc20a75fe06b074"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aa643266e0eccf3",
            "route_table_id": "rtb-01fe19840392be49a",
            "subnet_id": "subnet-053ed264a09779254"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5aa5f15dcef56bb",
            "route_table_id": "rtb-031431bf31183d24e",
            "subnet_id": "subnet-0bc593e727cef0b43"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080176bf841e9488a",
            "route_table_id": "rtb-0870a06ac2bdc6b18",
            "subnet_id": "subnet-0f7dafcbaae6724d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d03f220c453c709",
            "route_table_id": "rtb-01fe19840392be49a",
            "subnet_id": "subnet-0c1bf50325452692e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bbf0bcbfa98b222",
            "route_table_id": "rtb-031431bf31183d24e",
            "subnet_id": "subnet-098ddbc73b332512a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edcb5e78aef6f422",
            "route_table_id": "rtb-0870a06ac2bdc6b18",
            "subnet_id": "subnet-008dfd7c68976415d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2077aafba726a30",
            "route_table_id": "rtb-0324f639aa09fbbe0",
            "subnet_id": "subnet-095013b6cfe387aca"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0820c2871d34300bb",
            "route_table_id": "rtb-0324f639aa09fbbe0",
            "subnet_id": "subnet-001808ec4f77b9e03"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0237de4798a78dac7",
            "route_table_id": "rtb-0324f639aa09fbbe0",
            "subnet_id": "subnet-0947ba9a37b71ee2c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0b4f77971f7009323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.128.96/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f77971f7009323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0b0396b955c398fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.128.112/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0396b955c398fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-04cc20a75fe06b074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.1.128.128/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cc20a75fe06b074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-053ed264a09779254",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.128.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053ed264a09779254",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0bc593e727cef0b43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.128.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc593e727cef0b43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0f7dafcbaae6724d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.1.128.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7dafcbaae6724d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0c1bf50325452692e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.129.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1bf50325452692e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-098ddbc73b332512a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.129.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098ddbc73b332512a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1c"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-008dfd7c68976415d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.1.129.64/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008dfd7c68976415d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "hub-private-ap-northeast-1d"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-095013b6cfe387aca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.128.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095013b6cfe387aca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-public-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "hub-public-ap-northeast-1a"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-001808ec4f77b9e03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.128.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001808ec4f77b9e03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-public-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "hub-public-ap-northeast-1c"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0947ba9a37b71ee2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.1.128.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0947ba9a37b71ee2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hub-public-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "hub-public-ap-northeast-1d"
            },
            "vpc_id": "vpc-02d3c5f7f39172136"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc/vpc-02d3c5f7f39172136",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.128.0/20",
            "default_network_acl_id": "acl-0258eb2c5275d19e1",
            "default_route_table_id": "rtb-0bac24b0658d800f1",
            "default_security_group_id": "sg-0c65d701d63785e0c",
            "dhcp_options_id": "dopt-8f90f8ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d3c5f7f39172136",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bac24b0658d800f1",
            "owner_id": "931366402038",
            "tags": {
              "Name": "hub"
            },
            "tags_all": {
              "Name": "hub"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_pod",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:network-acl/acl-04784b53a746a2b09",
            "default_network_acl_id": "acl-04784b53a746a2b09",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04784b53a746a2b09",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "931366402038",
            "subnet_ids": [
              "subnet-05352ca2b7599f669",
              "subnet-084ac48142ebc54b1",
              "subnet-0df0645066347c637",
              "subnet-0e25461b900fa607a"
            ],
            "tags": {
              "Name": "pod-default"
            },
            "tags_all": {
              "Name": "pod-default"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_pod",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-025daa339d175455a",
            "default_route_table_id": "rtb-025daa339d175455a",
            "id": "rtb-025daa339d175455a",
            "owner_id": "931366402038",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "pod-default"
            },
            "tags_all": {
              "Name": "pod-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_pod",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:security-group/sg-0f7c95a0fa6fa55fd",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f7c95a0fa6fa55fd",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "931366402038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pod-default"
            },
            "tags_all": {
              "Name": "pod-default"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_pod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-013cddfe434cdf484",
            "id": "rtb-013cddfe434cdf484",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0758bf24f378e0dc0",
            "id": "rtb-0758bf24f378e0dc0",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0424de47702038264",
            "id": "rtb-0424de47702038264",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0f468abcc7f2eecd0",
            "id": "rtb-0f468abcc7f2eecd0",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0a6a38c3c7d96af81",
            "id": "rtb-0a6a38c3c7d96af81",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-0cba5347813bbab95",
            "id": "rtb-0cba5347813bbab95",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-09921b846051ef9ea",
            "id": "rtb-09921b846051ef9ea",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:route-table/rtb-056535d75d715f903",
            "id": "rtb-056535d75d715f903",
            "owner_id": "931366402038",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_pod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd66a68622781424",
            "route_table_id": "rtb-013cddfe434cdf484",
            "subnet_id": "subnet-05352ca2b7599f669"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aacbad50b3571d0a",
            "route_table_id": "rtb-0758bf24f378e0dc0",
            "subnet_id": "subnet-06681376aa8685e43"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c909579665d24e39",
            "route_table_id": "rtb-0424de47702038264",
            "subnet_id": "subnet-0df0645066347c637"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cf848343fa07a48",
            "route_table_id": "rtb-0f468abcc7f2eecd0",
            "subnet_id": "subnet-02b49af74f0fee60c"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f80940fed4ade19",
            "route_table_id": "rtb-0a6a38c3c7d96af81",
            "subnet_id": "subnet-0e25461b900fa607a"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5951849bcd16636",
            "route_table_id": "rtb-0cba5347813bbab95",
            "subnet_id": "subnet-0b4d7835c9ddb4e10"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf9a82a74d410e3",
            "route_table_id": "rtb-09921b846051ef9ea",
            "subnet_id": "subnet-084ac48142ebc54b1"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a59719543771b6f",
            "route_table_id": "rtb-056535d75d715f903",
            "subnet_id": "subnet-078e757614245567a"
          },
          "dependencies": [
            "module.vpc_pod.aws_route_table.private",
            "module.vpc_pod.aws_subnet.private",
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_pod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-05352ca2b7599f669",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.160.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05352ca2b7599f669",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-06681376aa8685e43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.160.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06681376aa8685e43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0df0645066347c637",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.160.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df0645066347c637",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-02b49af74f0fee60c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.160.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b49af74f0fee60c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0e25461b900fa607a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.160.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e25461b900fa607a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-0b4d7835c9ddb4e10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.160.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d7835c9ddb4e10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-084ac48142ebc54b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.161.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084ac48142ebc54b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1a"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:subnet/subnet-078e757614245567a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.162.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078e757614245567a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931366402038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "pod-private-ap-northeast-1c"
            },
            "vpc_id": "vpc-068ee7d718b46a952"
          },
          "dependencies": [
            "module.vpc_pod.aws_vpc.this",
            "module.vpc_pod.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_pod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:931366402038:vpc/vpc-068ee7d718b46a952",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.160.0/21",
            "default_network_acl_id": "acl-04784b53a746a2b09",
            "default_route_table_id": "rtb-025daa339d175455a",
            "default_security_group_id": "sg-0f7c95a0fa6fa55fd",
            "dhcp_options_id": "dopt-8f90f8ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068ee7d718b46a952",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025daa339d175455a",
            "owner_id": "931366402038",
            "tags": {
              "Name": "pod"
            },
            "tags_all": {
              "Name": "pod"
            }
          }
        }
      ]
    }
  ]
}